
= rufus-tokyo CHANGELOG.txt


== rufus-tokyo - 0.1.0    released 2009/01/23

- initial release
