@@ -38,7 +38,19 @@ class CabinetZero < Test::Unit::TestCase
     assert db.close
   end
 
-  # TODO : memory tests
+  def test_clear
+
+    db = Rufus::Tokyo::Cabinet.new('test_data.tch')
+
+    40.times { |i| db[i.to_s] = i.to_s }
+    assert_equal 40, db.size
+
+    db.clear
+
+    assert_equal 0, db.size
+
+    assert db.close
+  end
 
 end
 
